build: removed options that are no longer needed in JavaFX 25