@@ -28,8 +28,7 @@ application {
         "--enable-preview",
         "-XX:+UseZGC", "-XX:+ZUncommit", "-XX:ZUncommitDelay=64m",
         //"-XX:+UseCompactObjectHeaders",
-        "--enable-native-access=javafx.graphics", // Restricted methods will be blocked in a future release unless native access is enabled
-        "--sun-misc-unsafe-memory-access=allow")  // sun.misc.Unsafe::allocateMemory will be removed in a future release
+        "--enable-native-access=javafx.graphics") // Restricted methods will be blocked in a future release unless native access is enabled
         //"-XX:G1PeriodicGCInterval=5000")
     if (providers.systemProperty("debug").isPresent) {
         applicationDefaultJvmArgs = applicationDefaultJvmArgs.plus(listOf("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"))
@@ -94,7 +93,6 @@ tasks.register<Exec>("jpackage") {
         "--java-options", "-XX:ZUncommitDelay=64m",
         //"--java-options", "-XX:+UseCompactObjectHeaders",
         "--java-options", "--enable-native-access=javafx.graphics", // Restricted methods will be blocked in a future release unless native access is enabled
-        "--java-options", "--sun-misc-unsafe-memory-access=allow",  // sun.misc.Unsafe::allocateMemory will be removed in a future release
     )
 }
 
